# secure-messenger

./: .gitignore  DATA TRANSFER PROTOCOL.txt  README.md
python/: csv_to_json.py  onnx_model.py  spam_classifier.py
python/dataset/: spam.json
src/: CMakeLists.txt  main.c
src/ai_integration/: anti_phishing.c  anti_phishing.h
src/encryption/: aes.c  aes1.c  aes1.h  crypto_utils.c  crypto_utils.h  rsa.c  rsa.h  rsa1.c  rsa1.h  string_encoding.c  string_encoding.h
src/gui/: gui.c  gui.h  gui_utils.c  gui_utils.h
src/networking/: message_decoding.c  message_decoding.h  message_encoding.c  message_encoding.h  networking.c  networking.h  tls_handler.c  tls_handler.h
